--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -10,4 +10,4 @@ hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # Enable SQL logging
 hibernate.show_sql = true
 hibernate.format_sql = false
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
