Json Array with yasson dependancy

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -75,6 +75,17 @@
         <url-pattern>/json</url-pattern>
     </servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>JsonDataManipulate</servlet-name>
+        <servlet-class>com.example.demo1ee.JsonDataManipulate</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>JsonDataManipulate</servlet-name>
+        <url-pattern>/jsonData</url-pattern>
+    </servlet-mapping>
+
 </web-app>
 
 
