--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,18 @@
 
     <dependencies>
 
+<!--        jsonp implementation-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.eclipse.parsson</groupId>-->
+<!--            <artifactId>parsson</artifactId>-->
+<!--            <version>1.1.2</version>-->
+<!--        </dependency>-->
+
         <dependency>
-            <groupId>org.eclipse.parsson</groupId>
-            <artifactId>parsson</artifactId>
-            <version>1.1.2</version>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>2.0.4</version>
         </dependency>
 
 
@@ -64,6 +72,7 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
